[project]
name = "coin-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "typer>=0.21.1",
]

[project.scripts]
coin-collector = "coin_collector:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
